ros_motion_planning/log/pre_rotate.log
  File "/home/lcy/robot_graduation/ros_motion_planning/src/encoder_tools/scripts/pre_rotate.py", line 116
    )
    ^
SyntaxError: unmatched ')'
